# print_and_count

./: CMakeLists.txt  README.md  main.cpp
test/: test.cpp
